@@ -49,7 +49,8 @@ $languages = array(
     'fr' => array('fr([-_][[:alpha:]]{2})?|french', 'fr.lang.php', 'fr', 'Fran&ccedil;ais'),
     'it' => array('it([-_][[:alpha:]]{2})?|italian', 'it.lang.php', 'it', 'Italiano'),
     'pt_BR' => array('pt([-_]br)?|portuguese', 'pt_BR.lang.php', 'pt', 'Portuguese Brazilian'),
-    'no_NB' => array('no([-_]nb)?|norsk bokm&aring;l', 'no_NB.lang.php', 'no', 'Norsk Bokm&aring;l')
+    'no_NB' => array('no([-_]nb)?|norsk bokm&aring;l', 'no_NB.lang.php', 'no', 'Norsk Bokm&aring;l'),
+    'pl'   => array('cs([-_][[:alpha:]]{2})?|polish', 'pl.lang.php', 'pl', 'Polski')
 );
 
 // Language files directory	
